edition = "2023";  // successor to proto2 and proto3

package storage;

import "storage/common.proto";
import "google/protobuf/go_features.proto";

option go_package = "./storage;storage";
option java_package = "io.stackrox.proto.storage";
option features.(pb.go).api_level = API_OPAQUE;

message HTTPEndpointConfig {
  string endpoint = 1; // @gotags: scrub:"dependent"
  bool skip_tls_verify = 2;
  string ca_cert = 3;
  string username = 4; // @gotags: scrub:"dependent"
  // The password for the integration. The server will mask the value of this credential in responses and logs.
  string password = 5; // @gotags: scrub:"always"
  repeated KeyValuePair headers = 6;

  // The client certificate in PEM format for the integration.
  string client_cert_pem = 7;
  // The client key in PEM format for the integration. The server will mask the value of this credential in responses and logs.
  string client_key_pem = 8; // @gotags: scrub:"always"
}
